--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "newfront": "rm -rf build && cp -r ../../../2/laskarit/phonebook/build .",
     "lint": "eslint .",
-    "build": "cd frontend && npm run build"
+    "build": "cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "MIT",
