--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,5 +18,7 @@ jobs:
         node-version: '12.x'
     - name: npm install 
       run: npm install 
+    - name: lint
+      run: npm run lint
     - name: build
       run: npm run build
