--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "eslint": "^7.11.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"   
+}
 }
