--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,4 +29,6 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: phonebookupgraded
         heroku_email: hakonenweeti@gmail.com
-        
+        healthcheck: https://phonebookupgraded.herokuapp.com/health
+        checkstring: ok
+        rollbackonhealthcheckfailed: true
