--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,10 @@ jobs:
         healthcheck: https://phonebookupgraded.herokuapp.com/health
         checkstring: ok
         rollbackonhealthcheckfailed: true
+    - uses: actions/checkout@v2
+    - name: Bump version and push tag
+      if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ''), '#skip') }}
+      uses: anothrNick/github-tag-action@1.33.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMB: patch
